@@ -152,6 +152,11 @@ have a unique name, since this name is used to manage user preferences.
 Answer "y" or "n".
 
 
+  "Do you want the ten most recent changes included on the home page?"
+
+Answer "y" or "n".
+
+
   "What should the home page of the wiki be called?"
   "How would you describe the wiki?"
 
