@@ -97,6 +97,7 @@ t/41_deletion.t
 t/42_edit_conflict.t
 t/43_preview_edits.t
 t/44_node_image.t
+t/45_home_recent_changes.t
 t/51_display_node.t
 t/52_display_diffs.t
 t/53_show_index.t
