@@ -37,11 +37,11 @@ SKIP: {
     };
     is( $@, "", "->display_node doesn't die" );
 
-    like( $output, qr{\<a.*?\Qhref="alternate.cgi?id=Test_Page;action=edit">Edit this page</a>\E}, "...and edit link is redirected to source URL" );
+    like( $output, qr{\<a.*?\Qhref="alternate.cgi?id=Test_Page;action=edit"\E>Edit\s+this\s+page</a>}, "...and edit link is redirected to source URL" );
     $config->home_name( "My Home Page" );
     $output = $guide->display_node( return_output => 1 );
-    like( $output, qr/My Home Page/, "...and defaults to the home node, and takes notice of what we want to call it" );
-    like( $output, qr{\Q<a href="wiki.cgi?action=edit;id=My_Home_Page">Edit this page</a>\E}, "...and home page has an edit link" );
+    like( $output, qr/My\s+Home\s+Page/, "...and defaults to the home node, and takes notice of what we want to call it" );
+    like( $output, qr{\Q<a href="wiki.cgi?action=edit;id=My_Home_Page"\E>Edit\s+this\s+page</a>}, "...and home page has an edit link" );
     my %tt_vars = $guide->display_node( return_tt_vars => 1 );
     ok( defined $tt_vars{recent_changes}, "...and recent_changes is set for the home node even if we have changed its name" );
 }
