@@ -23,34 +23,44 @@
   [% INCLUDE navbar.tt %]
 [% END %]
 
-<div id="maincontent">
-<div id="recent">
-
-<h3>Ten most <a href="[% cgi_url %]?action=rc">recent changes</a>
-    (<a href="[% full_cgi_url %]?action=rc;format=rss">RSS</a>):</h3>
-
-<dl>
-  [% FOREACH node = recent_changes %]
-  <dt><a href="[% node.url %]">[% node.name %]</a>
-  [% IF node.version == "1" %]
-    [new]
-  [% END %]
-  </dt>
-  [% IF node.comment or node.username %]
-    <dd>
-      [% node.comment %]
-      [% IF node.username %]
-        <b><small>([% node.username %])</small></b>
-      [% END %]
-    </dd>
-  [% END %]
+[% IF !navbar_on_home_page AND !config.recent_changes_on_home_page %]
+  <div id="home_page_edit_link">
+    <a href="[% cgi_url %]?action=edit;id=[% node_param %]">Edit this page</a>
+  </div>
 [% END %]
-</dl>
 
-<p><b><a href="[% cgi_url %]?action=edit;id=[% node_param %]">Edit this page</a></b></p>
+<div id="maincontent">
+  [% IF config.recent_changes_on_home_page %]
+    <div id="recent">
 
-</div>
-[% content %]
+      <h3>Ten most <a href="[% cgi_url %]?action=rc">recent changes</a>
+          (<a href="[% full_cgi_url %]?action=rc;format=rss">RSS</a>):</h3>
+
+      <dl>
+        [% FOREACH node = recent_changes %]
+          <dt><a href="[% node.url %]">[% node.name %]</a>
+            [% IF node.version == "1" %]
+              [new]
+            [% END %]
+          </dt>
+          [% IF node.comment or node.username %]
+            <dd>
+              [% node.comment %]
+              [% IF node.username %]
+                <b><small>([% node.username %])</small></b>
+              [% END %]
+            </dd>
+          [% END %]
+        [% END %]
+      </dl>
+
+      <p><b><a href="[% cgi_url %]?action=edit;id=[% node_param %]">Edit
+      this page</a></b></p>
+
+    </div>
+  [% END %]
+
+  [% content %]
 
 </div>
 [% INCLUDE footer.tt %]
